--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@
     a {
         text-decoration: none;
     }
+    
+    .table tr {
+        border: 0px;
+    }
+    
+    th {
+        background-color: skyblue;
+    }
+    
+    td {
+        background-color: aqua;
+    }
     /* Navigation Bar */
     
     nav {
@@ -43,10 +55,16 @@
         padding: 10px;
         color: black;
     }
+    
+    .nav a:hover {
+        color: white;
+        background-image: linear-gradient(to bottom right, black, white);
+        border-radius: 10px;
+    }
     /* Welcome Section */
     
     #welcome {
-        height: 60vh;
+        height: 80vh;
         color: white;
         background-image: linear-gradient(62deg, #2f619e 0%, #00af1d 100%);
         margin-top: 40px;
@@ -68,6 +86,11 @@
         font-size: 2rem;
     }
     /* About me */
+    
+    #aboutme {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
     
     #aboutme h1 {
         font: 1em sans-serif;
@@ -110,10 +133,17 @@
         justify-content: space-evenly;
         align-items: center;
     }
+    
+    #aboutme p {
+        font-family: sans-serif;
+        word-spacing: 1px;
+        font-weight: 300;
+        padding: 20px;
+    }
     /* Projects */
     
     #projects {
-        margin: 20px;
+        padding-top: 30px;
     }
     
     #projects h1 {
@@ -194,10 +224,10 @@
     
     #contact a:hover {
         background: linear-gradient(45deg, blueviolet, yellow);
-        color: black;
+        transition: 0.2s;
+        color: whitesmoke;
         font-weight: bold;
-        margin: 2px;
-        padding: 10px;
+        padding: 5px;
         border-radius: 5px;
     }
     /* Footer */
@@ -208,6 +238,7 @@
     }
     
     footer h1 {
+        color: aliceblue;
         text-align: center;
         font-size: 30px;
         padding-top: 20px;
